--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@repo/typescript-config",
+  "name": "@todo/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  }
+  "files": [
+    "library.json",
+    "node.json"
+  ]
 }
