--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,30 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "pnpm env:load next dev --turbo",
+    "build": "pnpm env:load next build",
+    "start": "pnpm env:load next start",
+    "lint": "pnpm env:load next lint",
+    "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@todo/drizzle": "workspace:*",
+    "@todo/trpc": "workspace:*",
+    "@trpc/client": "11.0.0-rc.502",
+    "@trpc/react-query": "11.0.0-rc.502",
+    "@trpc/server": "11.0.0-rc.502",
     "class-variance-authority": "^0.7.0",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "dotenv-cli": "^7.4.2",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-react": "^0.2.2"
   },
   "devDependencies": {
     "@todo/eslint-config": "workspace:*",
