--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,7 +16,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "./tailwind.config.js"
+    "./tailwind.config.js",
+    "./.eslintrc.js"
   ],
   "exclude": ["node_modules"]
 }
