--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,20 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "ui": "tui",
+  "globalDependencies": [".env"],
+  "globalEnv": ["NODE_ENV", "VERCEL_ENV", "NEXT_PUBLIC_VERCEL_URL"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
-    "lint": {
-      "dependsOn": ["^lint"]
-    },
+    "db:generate": {},
+    "db:migrate": {},
+    "db:studio": {},
+    "db:seed": {},
     "dev": {
       "cache": false,
       "persistent": true
-    }
+    },
+    "lint": {}
   }
 }
